# tda-adjusted

./: .gitignore  CMakeLists.txt  parser.py  pass_script.py
new_test_cases/: UnionInit_O2.ll  memory_O2.ll  strcat_O2.ll  tda_memory_O2.ll  tda_strcat_O2.ll
src/: DeductionFunctions.cpp  PassPluginInfo.cpp  TransparentType.cpp  TransparentType.hpp  TypeDeductionAnalysis.cpp  TypeDeductionAnalysis.hpp
src/Containers/: InsertionOrderedMap.hpp
src/Debug/: Logger.cpp  Logger.hpp
src/TDAInfo/: DebugInfoParser.cpp  DebugInfoParser.hpp  StructPaddingInfo.cpp  StructPaddingInfo.hpp  TBAAParser.cpp  TBAAParser.hpp  TypeDeductionAnalysisInfo.cpp  TypeDeductionAnalysisInfo.hpp
src/Utils/: PrintUtils.hpp
